Added JAR and IDE compatibility