@@ -2,7 +2,6 @@ package hu.unideb.inf.mathhelper.dao.impl;
 
 import hu.unideb.inf.mathhelper.dao.LocationDAO;
 import hu.unideb.inf.mathhelper.dao.PanelDAO;
-import hu.unideb.inf.mathhelper.exception.FXMLFileNotFoundException;
 import hu.unideb.inf.mathhelper.ui.controller.Controller;
 import hu.unideb.inf.mathhelper.ui.controller.PanelController;
 import javafx.fxml.FXMLLoader;
@@ -14,6 +13,7 @@ import org.springframework.context.ApplicationContext;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URL;
 import java.util.Locale;
 import java.util.ResourceBundle;
 
@@ -30,17 +30,13 @@ public class PanelDAOImpl implements PanelDAO {
     }
 
     @Override
-    public BorderPane loadSampleQuestionPane() throws FXMLFileNotFoundException {
-        File file = checkFileExistence(locationDAO.getSampleQuestionPaneFilePath());
-        load(file);
-        return (BorderPane) load(file);
+    public BorderPane loadSampleQuestionPane() {
+        return (BorderPane) load(locationDAO.getSampleQuestionPaneFilePath());
     }
 
     @Override
-    public AnchorPane loadPanel(String fileName) throws FXMLFileNotFoundException {
-        File file = checkFileExistence(locationDAO.getPaneFilePath(fileName));
-        load(file);
-        return (AnchorPane) load(file);
+    public AnchorPane loadPanel(String fileName) {
+        return (AnchorPane) load(locationDAO.getPaneFilePath(fileName));
     }
 
     @Override
@@ -49,12 +45,12 @@ public class PanelDAOImpl implements PanelDAO {
     }
 
 
-    private Parent load(File file) {
-        String sceneName = file.getName();
+    private Parent load(String path) {
+        String sceneName = new File(path).getName();
         String bundleName = sceneName.substring(0,sceneName.indexOf("."));
         try {
             ResourceBundle resource = ResourceBundle.getBundle(locationDAO.getTextFilePath(bundleName), new Locale("hu","HU"));
-            FXMLLoader loader = new FXMLLoader(file.toURI().toURL(),resource);
+            FXMLLoader loader = new FXMLLoader(new URL(path),resource);
             loader.setControllerFactory(applicationContext::getBean);
             loader.load();
             controller = loader.getController();
@@ -65,14 +61,4 @@ public class PanelDAOImpl implements PanelDAO {
         }
         return new VBox();
     }
-
-    private File checkFileExistence(String path) throws FXMLFileNotFoundException {
-        File file = new File(path);
-        if (!file.exists()) {
-            throw new FXMLFileNotFoundException("No fxml file found in the given path: " + path);
-        } else {
-            return file;
-        }
-    }
-
 }
